// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display the deliveries form 1`] = `
<Fragment>
  <ActionsDropdown
    className="big-spacer-left"
  >
    <ActionsDropdownItem
      className="js-webhook-update"
      onClick={[Function]}
    >
      update_verb
    </ActionsDropdownItem>
    <ActionsDropdownItem
      className="js-webhook-deliveries"
      onClick={[Function]}
    >
      webhooks.deliveries.show
    </ActionsDropdownItem>
    <ActionsDropdownDivider />
    <ActionsDropdownItem
      className="js-webhook-delete"
      destructive={true}
      onClick={[Function]}
    >
      delete
    </ActionsDropdownItem>
  </ActionsDropdown>
</Fragment>
`;

exports[`should render correctly 1`] = `
<Fragment>
  <ActionsDropdown
    className="big-spacer-left"
  >
    <ActionsDropdownItem
      className="js-webhook-update"
      onClick={[Function]}
    >
      update_verb
    </ActionsDropdownItem>
    <ActionsDropdownDivider />
    <ActionsDropdownItem
      className="js-webhook-delete"
      destructive={true}
      onClick={[Function]}
    >
      delete
    </ActionsDropdownItem>
  </ActionsDropdown>
</Fragment>
`;
